mgmt/in-prod-siem-v2/helm/loki-base/kustomize/tenants/go-yubi/collectors/ocilogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-ocilogs
  namespace: tenant-go-yubi
  annotations:
    tenant: go-yubi
    collector: ocilogs
    type: http
spec:
  selector:
    app: http-ocilogs
  ports:
  - port: 8080
    targetPort: 8080
